--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #f8f9fa;
+  background-color: #007dfa;
 }
 
 header {
-  margin-bottom: 2rem;
+  margin-bottom: 4px;
 }
 
 #result {
-  font-size: 1.5rem;
+  font-size: 24px;
   font-weight: bold;
 }
