--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,15 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 body {
-  display: table;
-  width: 100%;
-  height: 100%;
   background-color: #171717;
   color: #000;
-  line-height: 1.6;
-  position: relative;
   font-family: sans-serif;
   overflow: hidden;
+  position: relative;
 }
 
 .lines {
@@ -47,8 +44,9 @@ body {
   left: 0;
   right: 0;
   height: 100%;
-  margin: auto;
-  width: 90vw;
+  width: 100%;
+  pointer-events: none; /* Ensure it does not interfere with interactions */
+  z-index: -1; /* Ensure it's behind other content */
 }
 
 .line {
@@ -56,10 +54,9 @@ body {
   width: 1px;
   height: 100%;
   top: 0;
-  left: 50%;
   background: rgba(255, 255, 255, 0.1);
-  overflow: hidden;
 }
+
 .line::after {
   content: "";
   display: block;
@@ -74,35 +71,20 @@ body {
     #ffffff 75%,
     #ffffff 100%
   );
-  -webkit-animation: drop 7s 0s infinite;
-  animation: drop 7s 0s infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+  animation: drop 7s infinite;
   animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
 }
+
 .line:nth-child(1) {
-  margin-left: -25%;
-}
-.line:nth-child(1)::after {
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-}
-.line:nth-child(3) {
-  margin-left: 25%;
-}
-.line:nth-child(3)::after {
-  -webkit-animation-delay: 2.5s;
-  animation-delay: 2.5s;
+  left: 25%;
 }
 
-@-webkit-keyframes drop {
-  0% {
-    top: -50%;
-  }
-  100% {
-    top: 110%;
-  }
+.line:nth-child(2) {
+  left: 50%;
+}
+
+.line:nth-child(3) {
+  left: 75%;
 }
 
 @keyframes drop {
@@ -113,7 +95,6 @@ body {
     top: 110%;
   }
 }
-
 /* #endregion */
 
 /* #region Main container */
@@ -141,5 +122,4 @@ body {
   font-size: 24px;
   font-weight: bold;
 }
-
 /* #endregion */
