--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 body {
-  background-color: #171717;
+  background-color: #17171763;
   color: #000;
   font-family: sans-serif;
   overflow: hidden;
